Alignment fixed in all layouts

--- a/res/css/views/rooms/_EventBubbleTile.pcss
+++ b/res/css/views/rooms/_EventBubbleTile.pcss
@@ -333,6 +333,9 @@ limitations under the License.
         .mx_EventTile_e2eIcon {
             flex-shrink: 0; /* keep it at full size */
         }
+        .mx_EventTile_e2eIcon_warning {
+            margin-top: 3px; // So that the shield is aligned with the first line of the message
+        }
     }
 
     &:not(.mx_EventTile_noBubble) .mx_EventTile_line:not(.mx_EventTile_mediaLine) {
