--- a/res/css/views/rooms/_EventTile.pcss
+++ b/res/css/views/rooms/_EventTile.pcss
@@ -485,7 +485,7 @@ $left-gutter: 64px;
         }
 
         .mx_EventTile_e2eIcon {
-            inset: 6px 0 0 44px;
+            inset: 5px 0 0 44px;
         }
 
         .mx_EventTile_msgOption {
@@ -822,9 +822,6 @@ $left-gutter: 64px;
     }
 }
 
-.mx_EventTile_e2eIcon_warning {
-    align-self: center;
-}
 .mx_EventTile_e2eIcon {
     position: relative;
     width: 14px;
@@ -1353,7 +1350,7 @@ $left-gutter: 64px;
     .mx_EventTile[data-layout="group"] {
         --MatrixChat_useCompactLayout_group-padding-top: $spacing-4;
         --MatrixChat_useCompactLayout-top-avatar: 2px;
-        --MatrixChat_useCompactLayout-top-e2eIcon: 3px;
+        --MatrixChat_useCompactLayout-top-e2eIcon: 4px;
         --MatrixChat_useCompactLayout_line-spacing-block: 0px;
 
         padding-top: var(--MatrixChat_useCompactLayout_group-padding-top);
